--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "magento/module-payment": "^100.1.5",
     "magento/module-offline-payments": "^100.1.2",
     "magento/module-store": "^100.1.5",
-    "magento/module-quote": "^100.1.4"
+    "magento/module-quote": "^100.1.4|^101.0.0"
   },
   "type": "magento2-module",
   "license": "MIT",
